Tue Apr  5 16:00:04 2005  Manish Singh  <yosh@gimp.org>

	* Makefile.am: add xdgmimecache.[ch].

2005-03-28  Matthias Clasen  <mclasen@redhat.com>

	* xdgmimeglob.c: Sync to latest upstream,
	including fixes for matching against multiple
	extensions (eg .tar.gz) and for suffix
	patterns which don't start with a dot.

Sat Mar 19 23:52:33 2005  Manish Singh  <yosh@gimp.org>

	* xdgmimeglob.c (_xdg_glob_hash_insert_text): cast away the constness
	in the call to free().

2005-03-20  Matthias Clasen  <mclasen@redhat.com>

	* xdgmimeglob.c (_xdg_glob_hash_insert_text): Don't 
	leak node->mime_type if we are reusing an existing
	node.  (#170774, Kjartan Maraas)

2005-01-08  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.6.1 ===
	
2004-12-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.6.0 ===

2004-12-13  Marco Pesenti Gritti  <marco@gnome.org>

	* xdgmimeglob.c: (_xdg_glob_hash_lookup_file_name):

	Resync with upstream again

Fri Dec 10 13:58:38 2004  Manish Singh  <yosh@gimp.org>

	* xdgmime.h: wrap new API in XDG_ENTRY().

2004-12-09  Marco Pesenti Gritti  <marco@gnome.org>

	* xdgmime.c: (xdg_mime_unalias_mime_type),
	(xdg_mime_mime_type_equal), (xdg_mime_mime_type_subclass),
	(xdg_mime_get_mime_parents):
	* xdgmime.h:
	* xdgmimealias.c: (_xdg_mime_alias_list_lookup):
	* xdgmimeglob.c: (_xdg_glob_hash_node_lookup_file_name):
	* xdgmimeint.c: (_xdg_ucs4_to_lower):
	* xdgmimeint.h:
	* xdgmimemagic.c: (_xdg_mime_magic_read_from_file):
	* xdgmimeparent.c: (_xdg_mime_parent_list_lookup):

	Resync with upstream

2004-12-09  Matthias Clasen  <mclasen@redhat.com>

	* xdgmimealias.c (_xdg_mime_alias_read_from_file): 
	* xdgmimeparent.c (_xdg_mime_parent_read_from_file): Make
	repeated calls accumulate the results, don't call qsort()
	on empty arrays.  (#160838, Mariano Suárez-Alvarez)

2004-12-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.5.6 ===

2004-11-29  Matthias Clasen  <mclasen@redhat.com>
